@@ -1,3 +1,9 @@
+2016-03-05 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCerr.c
+	* src/SDCCval.c
+	  Remove warning #212 W_LONGLONG_LITERAL.
+
 2016-03-04 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCicode.c
